Minor corrections to the alignment of elements on the screen and the beginning of responsiveness.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
-.container {
-  display: flex;
-  gap: 45px;
+:host {
+  --max-width: 1770px;
 }
+
+
