--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,8 +10,5 @@
 
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  background: ghostwhite;
 }
